v26.4-20260510: Security audit fixes - null checks, resource cleanup, atomic operations